[gd_scene load_steps=11 format=2]

[ext_resource path="res://base_theme.tres" type="Theme" id=1]
[ext_resource path="res://table.gd" type="Script" id=2]
[ext_resource path="res://bold.tres" type="DynamicFont" id=3]
[ext_resource path="res://normal.tres" type="DynamicFont" id=4]
[ext_resource path="res://light.tres" type="DynamicFont" id=5]

[sub_resource type="ShortCut" id=2]

[sub_resource type="InputEventAction" id=5]
action = "fullscreen"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="InputEventAction" id=3]
action = "exit"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="Level" type="Node2D"]

[node name="Table" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Rectangle" type="Polygon2D" parent="Table"]

[node name="CircleHolder" type="Node2D" parent="Table"]

[node name="UI" type="Control" parent="."]
margin_left = 40.0
margin_top = 20.0
theme = ExtResource( 1 )

[node name="Title" type="Label" parent="UI"]
margin_right = 425.0
margin_bottom = 57.0
custom_fonts/font = ExtResource( 3 )
text = "Skittle Simulator"

[node name="BackgroundPicker" type="ColorPickerButton" parent="UI"]
margin_top = 60.0
toggle_mode = false
text = "Pick Colour"
flat = true
color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )

[node name="SelectedColors" type="Label" parent="UI/BackgroundPicker"]
margin_left = 180.0
margin_top = 3.0
margin_right = 322.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 5 )
text = "Current colors:"
align = 1
autowrap = true

[node name="DiscPicker" type="ColorPickerButton" parent="UI"]
margin_top = 100.0
toggle_mode = false
text = "Pick Colour"
flat = true
color = Color( 1, 1, 1, 1 )

[node name="Reset" type="Button" parent="UI/DiscPicker"]
margin_top = 40.0
margin_right = 107.0
margin_bottom = 68.0
shortcut_in_tooltip = false
text = "reset colors"
flat = true

[node name="Width" type="SpinBox" parent="UI"]
margin_left = 6.0
margin_top = 180.0
min_value = 1.0
max_value = 2000.0
value = 500.0
suffix = "px"

[node name="Label" type="Label" parent="UI/Width"]
margin_left = 90.0
text = "width"

[node name="Length" type="SpinBox" parent="UI"]
margin_left = 6.0
margin_top = 220.0
min_value = 1.0
max_value = 2000.0
value = 500.0
suffix = "px"

[node name="Label" type="Label" parent="UI/Length"]
margin_left = 90.0
text = "length"

[node name="Radius" type="SpinBox" parent="UI"]
margin_left = 6.0
margin_top = 260.0
min_value = 1.0
max_value = 2000.0
value = 10.0
suffix = "px"

[node name="Label" type="Label" parent="UI/Radius"]
margin_left = 90.0
text = "radius"

[node name="Drops" type="SpinBox" parent="UI"]
margin_left = 6.0
margin_top = 300.0
min_value = 1.0
value = 30.0

[node name="Label" type="Label" parent="UI/Drops"]
margin_left = 90.0
text = "retries"

[node name="Inner" type="CheckButton" parent="UI"]
margin_top = 330.0
margin_right = 76.0
margin_bottom = 370.0
shortcut_in_tooltip = false

[node name="Label" type="Label" parent="UI/Inner"]
margin_left = 96.0
margin_top = 5.0
text = "inner"

[node name="Generate" type="Button" parent="UI"]
margin_top = 380.0
margin_right = 162.0
margin_bottom = 144.0
custom_fonts/font = ExtResource( 4 )
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
text = "Generate >>"
flat = true

[node name="Save" type="Button" parent="UI/Generate"]
margin_top = 50.0
custom_fonts/font = ExtResource( 4 )
shortcut_in_tooltip = false
text = "Save <<"
flat = true
align = 0

[node name="Fullscreen" type="Button" parent="UI/Generate"]
margin_left = 10.0
margin_top = 100.0
margin_right = 107.0
margin_bottom = 68.0
shortcut_in_tooltip = false
shortcut = SubResource( 6 )
text = "Fullscreen"
flat = true
align = 0

[node name="Exit" type="Button" parent="UI/Generate"]
margin_left = 10.0
margin_top = 130.0
margin_right = 107.0
margin_bottom = 68.0
shortcut_in_tooltip = false
shortcut = SubResource( 4 )
text = "Exit"
flat = true
align = 0

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[connection signal="color_changed" from="UI/BackgroundPicker" to="Table" method="_on_background_color_changed"]
[connection signal="color_changed" from="UI/DiscPicker" to="Table" method="_on_disc_color_changed"]
[connection signal="popup_closed" from="UI/DiscPicker" to="Table" method="_on_disc_popup_closed"]
[connection signal="pressed" from="UI/DiscPicker/Reset" to="Table" method="_on_reset_pressed"]
[connection signal="value_changed" from="UI/Width" to="Table" method="_on_width_value_changed"]
[connection signal="value_changed" from="UI/Length" to="Table" method="_on_length_value_changed"]
[connection signal="value_changed" from="UI/Radius" to="Table" method="_on_radius_value_changed"]
[connection signal="value_changed" from="UI/Drops" to="Table" method="_on_drops_value_changed"]
[connection signal="toggled" from="UI/Inner" to="Table" method="_on_inner_toggled"]
[connection signal="pressed" from="UI/Generate" to="Table" method="_on_generate_pressed"]
[connection signal="pressed" from="UI/Generate/Save" to="Table" method="_on_save_pressed"]
[connection signal="pressed" from="UI/Generate/Fullscreen" to="Table" method="_on_fullscreen_pressed"]
[connection signal="pressed" from="UI/Generate/Exit" to="Table" method="_on_exit_pressed"]
